syntax = "proto3";

option csharp_namespace = "NDC_DONATION_2024.Protos";

package Members;

service MembersSvc {
	rpc CreateMember(MemberRequest) returns (CreateMemberResponse);
	rpc CreateMemberUssd(MemberUssdRequest) returns (MemberResponse);
	rpc GetMembers(GetMembersRequest) returns (MemberListResponse);
	rpc LoginMember(MemberLoginRequest) returns (MemberLoginResponse);
	rpc CheckIfMemberExist(MemberExistRequest) returns (MemberExistResponse);
	rpc CreateJMMember(JMRequest) returns (JMResponse);
	rpc CreateMemberByAgent(MemberRequest) returns (CreateMemberResponse);
	rpc ResetMemberPin(ResetPinRequest) returns (ResetPinResponse); // CHANGE PIN

}

message MemberEmptyRequest {

}

message AgentMemberResponse {

}

message GetMembersRequest {
	string MemberTypeJMORGGC = 1;
}

message MemberExistRequest {
	 string mobileNumberOrEmailAddress = 1;
	 JMOrGGCValues memberType = 2; 

}

message ResetPinRequest {
	string PIN= 1;
	string mobileNumberOrEmailAddress = 2;
}

message ResetPinResponse {
	bool status = 1;
	string message = 2;
}

message MemberRequest {
	string fullName = 1;
	string mobileNumber = 2;
	string emailAddress = 3;
	string gender = 4;
	int32 age = 5; // not required
	string countryOfResidence = 6;
	string regionId = 7;
	string constituencyId = 8;
	string industry = 9;
	string occupation = 10;
	string NDCMemberIdNo = 11;// not required
	string agentId = 12;
	string PIN = 13;
	string mobielWebUssd = 14;
	string ageRageId = 15;
	string displayNameOnCard =16;
	string cardPickUpLocation =17;
	string cardTypeId = 18;
	AccountCreationStatus accountCreationStatus = 19;
	string countryCode = 20;
}

message MemberUssdRequest {
	string mobileNumber = 2;
	string networkId = 3;
	string memberType = 4; // JM OR GGC
	string cardTypeId = 5;
}



message MemberResponse {
	bool status = 1;
	string message = 2;
}

message MemberExistResponse {
	bool status =1;
	string message = 2;
	AccountCreationStatus accountStatus = 3;
	string cardNo =4;
	string memberId = 5;
	string MemberName = 6;
}

message CreateMemberResponse {
	bool status = 1;
	string message = 2;
	string memberId = 3;
	string cardNumber = 4;
}

message Member {
	
	string fullName = 1;
	string mobileNumber = 2;
	string emailAddress = 3;
	string gender = 4;
	int32 age = 5;
	string countryOfResedence = 6;
	string regionId = 7;
	string constituencyId = 8;
	string industry = 9;
	string occupation = 10;
	string NDCMemberIdNo = 11;
	string agentId = 12;
	string mobielWebUssd = 14;
	string ageRangeId = 15;
	string displayNameOnCard =16;
	string cardPickUpLocation =17;
	string cardStatus = 18;
	string cardNumber = 19;
	int32 id = 20;
	double transAmount = 21;
}

message MemberListResponse {
	repeated Member memberList = 1;
}

message MemberLoginRequest {
	string mobileNumberOrEmailAddress = 1;
	string PIN = 2;
	JMOrGGCValues accountType =3;
	MobileOrUssd platformType = 4;

}

enum JMOrGGCValues {
	 JM = 0;
	 GGC = 1;
}

enum AccountCreationStatus {
	COMPLETE = 0;
	INCOMPLETE =1;
	DOES_NOT_EXIST=2;
}

enum MobileOrUssd {
	MOBILE = 0;
	USSD  = 1;
}

message MemberLoginResponse {
	bool status = 1;
	string message = 2;
	string cardNumber = 3;
	string memberId = 4;
	string cardTypeId = 5;
	string cardTypeName = 6;
	string fullName = 7;
	string registrationDate =8;
}


message JMRequest {
	string mobileNumberOrEmailAddress = 1;
	string PIN =2;
	string agentId = 3;
}

message JMResponse {
	bool status= 1;
	string message = 2;
	string memberId =3;
}

